fixed alignment

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ ul{
     padding-right: 150px;
     padding-top: 50px;
     padding-bottom: 100px;
+    align-items: center;
 }
 
 h3{
@@ -107,7 +108,7 @@ button{
 .fifth{
     display: flex; 
     padding: 50px 100px 50px 100px;
-    align-items: center;
+    justify-content: center;
 }
 
 .inner{
@@ -117,6 +118,7 @@ button{
     display: flex;
     gap: 100px;
     padding: 33px;
+
 ;
 }
 
